syntax = "proto3";

option go_package = "./;validator_api";

package validator_api;

import "google/protobuf/timestamp.proto";

service ValidatorAPI {
  // Health returns the health of the API.
  rpc HealthGRPC (EmptyMessage) returns (HealthResponse) {}
  rpc ValidateTransaction(ValidateTransactionRequest) returns (ValidateTransactionResponse) {}
  rpc ValidateTransactionBatch(ValidateTransactionBatchRequest) returns (ValidateTransactionBatchResponse) {}
  rpc ValidateTransactionStream(stream ValidateTransactionRequest) returns (ValidateTransactionResponse) {}
  rpc GetBlockHeight(EmptyMessage) returns (GetBlockHeightResponse) {}
  rpc GetMedianBlockTime(EmptyMessage) returns (GetMedianBlockTimeResponse) {}
}

// swagger:model EmptyMessage
message EmptyMessage {}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// swagger:model ValidateTransactionRequest
message ValidateTransactionRequest {
  bytes transaction_data = 1;
  uint32 block_height = 2;
}

// swagger:model ValidateTransactionResponse
message ValidateTransactionResponse {
  bool valid = 1;
  bytes txid = 2;
  string reason = 3;
}

// swagger:model ValidateTransactionBatchRequest
message ValidateTransactionBatchRequest {
  repeated ValidateTransactionRequest transactions = 1;
}

// swagger:model ValidateTransactionBatchResponse
message ValidateTransactionBatchResponse {
  bool valid = 1;
  repeated string errors = 2;
}

// swagger:model GetBlockHeightResponse
message GetBlockHeightResponse {
  uint32 height = 1;
}

// swagger:model GetMedianBlockTimeResponse
message GetMedianBlockTimeResponse {
  uint32 median_time = 1;
}
